--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Forbidden Files Guide</title>
 </head>
 <body>
     <div>yes</div>
+    <p>yea so uhm this is the guide for Forbidden Files incase you dont wanna spend countless hours looking for a single secret lmao</p>
     <ul>
         <li></li>
         <li></li>
