--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Forbidden Files Guide</title>
 </head>
 <body>
-    <div>yes</div>
+    <div>the fucking guide</div>
     <p>yea so uhm this is the guide for Forbidden Files incase you dont wanna spend countless hours looking for a single secret lmao</p>
     <ul>
         <li></li>
@@ -15,8 +15,14 @@
         <li></li>
         <li></li>
     </ul>
-    <div class="myclass"></div>
-    <input type="text" id="foo" class="bar">
-    <input type="date" name="" id="">
+    <div>CORRUBI</div>
+    <p>Corrubi is one of the antagonists of Forbidden Files, they do tend to get aggresive, they have 3 songs
+        Deletion
+        Data Restored
+        C0RRUPT
+        Deletion and Data Restored have basic mechanics, so they are fairly easy, C0RRUPT, on the other hand,
+        C0RRUPT has very hard mechanics, and take time to understand, its very hard to beat as well
+        Corrubi appears in some songs as well in the background
+    </p>
 </body>
 </html>
