--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<i class="fa-solid fa-clipboard-question"></i>
 <html lang="en">
-<head>
+<head> <script src="https://kit.fontawesome.com/a1e710027d.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
