--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <li></li>
     </ul>
     <div>CORRUBI</div>
-    <p>Corrubi is one of the antagonists of Forbidden Files, they do tend to get aggresive, they have 3 songs
-        Deletion
-        Data Restored
-        C0RRUPT
+    <p>Corrubi is one of the antagonists of Forbidden Files, they do tend to get aggresive, they have 3 songs;
+        Deletion,
+        Data Restored,
+        C0RRUPT.
         Deletion and Data Restored have basic mechanics, so they are fairly easy, C0RRUPT, on the other hand,
-        C0RRUPT has very hard mechanics, and take time to understand, its very hard to beat as well
+        C0RRUPT has very hard mechanics, and take time to understand, its very hard to beat as well.
         Corrubi appears in some songs as well in the background
     </p>
 </body>
